src/k8s/kafka/kafka-connect-ui.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-connect-ui
  namespace: kafka
spec:
  containers:
  - name: kafka-connect-ui
    image: landoop/kafka-connect-ui
    ports:
    - containerPort: 8000
      name: connect-ui
      protocol: TCP
