src/k8s/kafka/kafka-hq.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-hq
  namespace: kafka
spec:
  volumes:
    - name: config-volume
      configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        name: kafka-hq-config
  containers:
  - name: kafka-hq
    image: tchiotludo/kafkahq
    ports:
    - containerPort: 8080
      name: topics-ui
      protocol: TCP
    volumeMounts:
    - name: config-volume
      mountPath: /app/application.conf
      subPath: application.conf
