src/k8s/kafka/kafka-topics-ui.yml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-topics-ui
  namespace: kafka
spec:
  containers:
  - name: kafka-topics-ui
    image: landoop/kafka-topics-ui
    ports:
    - containerPort: 8000
      name: topics-ui
      protocol: TCP
