src/k8s/kafka/kafka-connect-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: kafka-connect-ui
  name: kafka-connect-ui
  namespace: kafka
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: kafka-connect-ui
  type: ClusterIP
status:
  loadBalancer: {}
