src/k8s/kafka/kafka-hq-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: kafka-hq
  name: kafka-hq
  namespace: kafka
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: kafka-hq
  type: ClusterIP
status:
  loadBalancer: {}
