src/k8s/kafka/kafka-connect-ui-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-connect-ui-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kafka-connect-ui.jx.35.233.117.189.nip.io
    http:
      paths:
      - backend:
          serviceName: kafka-connect-ui
          servicePort: 8000
        path: /
