src/k8s/kafka/kafka-hq-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-hq-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kafka-hq.jx.35.233.117.189.nip.io
    http:
      paths:
      - backend:
          serviceName: kafka-hq
          servicePort: 8080
        path: /
